--- a/index.html
+++ b/index.html
@@ -1394,8 +1394,8 @@
       <div class="section-container">
         <h2 class="section-title">Our Services</h2>
         <p class="section-description">
-          Explore our recent projects and see how we've helped businesses like
-          yours succeed.
+          Maintaining Peak Efficiency in Laboratory Work
+At Bernatali Inventions (Pvt) Ltd, we don’t just provide scientific products—we guarantee precision, efficiency, and hassle-free lab operations. Our expert services include equipment maintenance, calibration, and practical training to boost performance, ensure compliance, and sharpen user skills.
         </p>
       </div>
     </section>
