--- a/Analytical.html
+++ b/Analytical.html
@@ -242,7 +242,7 @@
       /* Hero Banner */
       .category-banner {
         height: 50vh;
-        background-image: url("images/analytical-equipment-banner.jpg");
+        background-image: url("images/testing.jpg");
         background-size: cover;
         background-position: center;
         display: flex;
