--- a/Laboratory.html
+++ b/Laboratory.html
@@ -242,7 +242,7 @@
       /* Hero Banner */
       .category-banner {
         height: 50vh;
-        background-image: url("images/Medical.jpg");
+        background-image: url("images/scientist-2141259_1280.jpg");
         background-size: cover;
         background-position: center;
         display: flex;
