--- a/Testing.html
+++ b/Testing.html
@@ -242,7 +242,7 @@
       /* Hero Banner */
       .category-banner {
         height: 50vh;
-        background-image: url("images/testing-equipment-banner.jpg");
+        background-image: url("images/lab-217043_1280.jpg");
         background-size: cover;
         background-position: center;
         display: flex;
