--- a/index.html
+++ b/index.html
@@ -1020,32 +1020,29 @@
       <div class="hero-bg-slider">
         <div
           class="slide active"
-          style="background-image: url('images/image1.jpg')"
+          style="background-image: url('images/analysis-2030265_1280.jpg')"
         ></div>
         <div
           class="slide"
-          style="background-image: url('images/image2.jpg')"
+          style="background-image: url('images/lab-217043_1280.jpg')"
         ></div>
         <div
           class="slide"
-          style="background-image: url('images/image3.jpg')"
+          style="background-image: url('images/pexels-ivan-samkov-9628799.jpg')"
         ></div>
         <div
           class="slide"
-          style="background-image: url('images/image4.jpg')"
+          style="background-image: url('images/scientist-2141259_1280.jpg')"
         ></div>
         <div
           class="slide"
-          style="background-image: url('images/Laboratory.jpg')"
+          style="background-image: url('images/testing.jpg')"
         ></div>
         <div
           class="slide"
-          style="background-image: url('images/Medical.jpg')"
+          style="background-image: url('images/trnava-university-_9xRHrMOjeg-unsplash.jpg')"
         ></div>
-        <div
-          class="slide"
-          style="background-image: url('images/image5.jpg')"
-        ></div>
+        
       </div>
 
       <div class="hero-overlay"></div>
@@ -1068,19 +1065,6 @@
     <section class="solutions-marquee">
       <div class="marquee-container">
         <div class="marquee-track">
-          <!-- Original Items with Links -->
-          <a href="microscopy-solutions.html" class="marquee-item">
-            <i class="fas fa-microscope"></i>
-            <span>Microscopy Solutions</span>
-          </a>
-          <a href="analytical-chemistry.html" class="marquee-item">
-            <i class="fas fa-vial"></i>
-            <span>Analytical Chemistry</span>
-          </a>
-          <a href="molecular-biology.html" class="marquee-item">
-            <i class="fas fa-dna"></i>
-            <span>Molecular Biology</span>
-          </a>
 
           <!-- New Categories with Links -->
           <a href="analytical-equipment.html" class="marquee-item">
@@ -1107,39 +1091,11 @@
             <i class="fas fa-check-double"></i>
             <span>Testing Equipment</span>
           </a>
-
-          <!-- Climate Control -->
-          <a href="climate-control.html" class="marquee-item">
-            <i class="fas fa-temperature-low"></i>
-            <span>Climate Control Systems</span>
-          </a>
-          <a href="lab-automation.html" class="marquee-item">
-            <i class="fas fa-robot"></i>
-            <span>Lab Automation</span>
-          </a>
-          <a href="biosafety-solutions.html" class="marquee-item">
-            <i class="fas fa-shield-virus"></i>
-            <span>Biosafety Solutions</span>
-          </a>
-
-          <!-- Duplicates for seamless looping (with same links) -->
-          <a href="microscopy-solutions.html" class="marquee-item">
-            <i class="fas fa-microscope"></i>
-            <span>Microscopy Solutions</span>
-          </a>
-          <a href="analytical-chemistry.html" class="marquee-item">
-            <i class="fas fa-vial"></i>
-            <span>Analytical Chemistry</span>
-          </a>
-          <a href="molecular-biology.html" class="marquee-item">
-            <i class="fas fa-dna"></i>
-            <span>Molecular Biology</span>
-          </a>
           <a href="analytical-equipment.html" class="marquee-item">
             <i class="fas fa-chart-line"></i>
             <span>Analytical Equipment</span>
           </a>
-          <a href="laboratory-equipment.html" class="marquee-item">
+          <a href="Laboratory.html" class="marquee-item">
             <i class="fas fa-flask"></i>
             <span>Laboratory Equipment</span>
           </a>
@@ -1155,10 +1111,36 @@
             <i class="fas fa-pills"></i>
             <span>Pharmaceutical Equipment</span>
           </a>
-          <a href="testing-equipment.html" class="marquee-item">
+          <a href="Testing.html" class="marquee-item">
             <i class="fas fa-check-double"></i>
             <span>Testing Equipment</span>
           </a>
+          <a href="analytical-equipment.html" class="marquee-item">
+            <i class="fas fa-chart-line"></i>
+            <span>Analytical Equipment</span>
+          </a>
+          <a href="Laboratory.html" class="marquee-item">
+            <i class="fas fa-flask"></i>
+            <span>Laboratory Equipment</span>
+          </a>
+          <a href="medical-equipment.html" class="marquee-item">
+            <i class="fas fa-medkit"></i>
+            <span>Medical Equipment</span>
+          </a>
+          <a href="petroleum-equipment.html" class="marquee-item">
+            <i class="fas fa-gas-pump"></i>
+            <span>Petroleum Equipment</span>
+          </a>
+          <a href="pharmaceutical-equipment.html" class="marquee-item">
+            <i class="fas fa-pills"></i>
+            <span>Pharmaceutical Equipment</span>
+          </a>
+          <a href="Testing.html" class="marquee-item">
+            <i class="fas fa-check-double"></i>
+            <span>Testing Equipment</span>
+          </a>
+
+          
         </div>
       </div>
     </section>
@@ -1407,7 +1389,7 @@ At Bernatali Inventions (Pvt) Ltd, we donâ€™t just provide scientific productsâ€
         padding: 6rem 0;
         position: relative;
         overflow: hidden;
-        background-image: url("images/Medical.jpg"); /* Your background image */
+        background-image: url("images/testalize-me-0jE8ynV4mis-unsplash.jpg"); /* Your background image */
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
@@ -1798,7 +1780,7 @@ At Bernatali Inventions (Pvt) Ltd, we donâ€™t just provide scientific productsâ€
       .careers {
         position: relative;
         padding: 6rem 2rem;
-        background-image: url("images/career.jpg");
+        background-image: url("images/testing.jpg");
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
