--- a/Pharmaceutical.html
+++ b/Pharmaceutical.html
@@ -892,7 +892,7 @@
       const navLinks = document.getElementById("navLinks");
 
       mobileMenuBtn.addEventListener("click", () => {
-        navLinks.classList.toggle("show");
+        navLinks.classList.toggle("active");
         mobileMenuBtn.innerHTML = navLinks.classList.contains("active")
           ? '<i class="fas fa-times"></i>'
           : '<i class="fas fa-bars"></i>';
@@ -901,7 +901,7 @@
       // Close mobile menu when clicking a link
       document.querySelectorAll(".nav-links a").forEach((link) => {
         link.addEventListener("click", () => {
-          navLinks.classList.remove("show");
+          navLinks.classList.remove("active");
           mobileMenuBtn.innerHTML = '<i class="fas fa-bars"></i>';
         });
       });
