--- a/Pharmaceutical.html
+++ b/Pharmaceutical.html
@@ -887,7 +887,7 @@
         offset: 100,
       });
 
-      // Mobile Menu Toggle
+      // Mobile menu toggle
       const mobileMenuBtn = document.getElementById("mobileMenuBtn");
       const navLinks = document.getElementById("navLinks");
 
@@ -905,7 +905,6 @@
           mobileMenuBtn.innerHTML = '<i class="fas fa-bars"></i>';
         });
       });
-
       // Header scroll effect
       const header = document.getElementById("header");
       let lastScroll = 0;
