--- a/Medical.html
+++ b/Medical.html
@@ -777,8 +777,7 @@
 
       <div class="footer-bottom">
         <p>
-          &copy; 2025 GreenSite. All rights reserved. | Designed with
-          <i class="fas fa-heart" style="color: #ff6b6b"></i> for the planet
+          &copy; 2025 BNInventions
         </p>
       </div>
     </footer>
