--- a/index.html
+++ b/index.html
@@ -2309,7 +2309,7 @@
             </li>
             <li>
               <a href="mailto:hello@greensite.com"
-                ><i class="fas fa-envelope"></i></a
+                ><i class="fas fa-envelope">tharaka@bernatali.com</i></a
               >
             </li>
             <li>
